<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:elevation="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:contentDescription="@string/app_name" />
<!--        <TextView
            android:id="@+id/walkTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageIcon"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Booley Bay" />-->

       <TextView
            android:id="@+id/radioGroupTerrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/imageIcon"
            android:text="@string/beach"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/radioGroupDifficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/radioGroupTerrain"
            android:text="@string/easy"
            android:textSize="24sp" />



    </RelativeLayout>
</androidx.cardview.widget.CardView>